Color contrast fixes

--- a/resources/assets/src/app/components/edit-assessment/edit-assessment.component.scss
+++ b/resources/assets/src/app/components/edit-assessment/edit-assessment.component.scss
@@ -213,7 +213,7 @@
     }
 
     .qc-selected-incorrect {
-        color: $dark-gray;
+        color: $darker-gray;
 
         &:hover {
             color: $green;
