--- a/resources/assets/src/styles/toggle.scss
+++ b/resources/assets/src/styles/toggle.scss
@@ -72,7 +72,7 @@
 // theme for ios toggle
 .tgl-ios {
     + .tgl-btn {
-        background: $dark-gray;
+        background: $darker-gray;
         border: 1px solid $toggle-grey-border;
         border-radius: 2em;
         padding: 2px;
